Added more boxes and the template for the budget box

--- a/housing-helper/src/styles.css
+++ b/housing-helper/src/styles.css
@@ -17,5 +17,5 @@ h1{
 }
 
 .button-container{
-  @apply  border-2 border-accent rounded-lg flex flex-row justify-center bg-accent;
+  @apply  border-2 border-accent rounded-lg flex flex-row justify-center bg-accent cursor-pointer;
 }
