--- a/housing-helper/src/styles.css
+++ b/housing-helper/src/styles.css
@@ -3,6 +3,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
+*{
+  font-family: "Space Grotesk", sans-serif;
+}
 
 .header {
     @apply flex justify-between items-center sm:px-16 px-8 py-4 w-full mx-auto absolute top-0 z-10 right-0 left-0;
@@ -18,4 +23,8 @@ h1{
 
 .button-container{
   @apply  border-2 border-accent rounded-lg flex flex-row justify-center bg-accent cursor-pointer;
+}
+
+.input-container{
+  @apply  border-2 border-accent rounded-lg flex flex-row justify-center bg-text cursor-pointer;
 }
